--- a/inst/rmd/quality_control.Rmd
+++ b/inst/rmd/quality_control.Rmd
@@ -97,7 +97,7 @@ The following (r)RNA were used by the coverage tool: **`r as.character(ribo_to_c
 The following metadata are used in the project **`r params$project_name`** :
 
 ```{r, echo=FALSE}
-create_dt(ribo_to_check[[2]])
+knitr::kable(ribo_to_check[[2]])
 ```
  
 # Global coverage
